updating form template CSS to make sure buttons, etc., are aligned.  May need to tweak if field names get too big.

--- a/vcweb/static/css/guarantee/style.css
+++ b/vcweb/static/css/guarantee/style.css
@@ -14,6 +14,20 @@ body {
 	color: #8A8A8A;
 }
 
+.submit input {
+	margin-left: 8.5em;
+}
+
+span.label {
+	float: left;
+	text-align: right;
+    width: 6em;
+    font-weight: bolder;
+    margin-right: 0.5em;
+    margin-top: 0.2em;
+    display:block;
+}
+
 h1, h2, h3 {
 	margin: 0;
 	text-transform: uppercase;
